# ai-config-sync

./: .gitignore  LICENSE  README.md  README_CN.md  SKILL.md  ai-sync.py  pyproject.toml
.github/workflows/: test.yml
src/ai_config_sync/: cli.py  crypto.py  diff_package.py  export_package.py  import_package.py  models.py  scanner.py  selectors.py
src/ai_config_sync/adapters/: __init__.py  _json.py  base.py  claude_code.py  opencode.py
tests/: test_claude_code_adapter.py  test_cli.py  test_crypto.py  test_diff.py  test_export_import.py  test_opencode_adapter.py  test_selectors.py  test_update_merge.py
