[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-config-sync"
version = "0.3.0"
description = "Local-only AI coding client third-party provider config migration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kinghonga" }]
dependencies = ["cryptography>=41"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
ai-sync = "ai_config_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
